@@ -11,8 +11,8 @@
       <h2>Thumbnails of Full Desktops</h2>
     </center>
     Click on the image for the full sized version.
-    <table>
-      <tr><td>
+    <table border>
+      <tr valign="top"><td>
 	  <a href="Mikhael-desk-1152x864.gif">
 	    <img src="Mikhael-desk-thumbnail.gif"
 	      alt="Mikhael Goikhman's Desktop"
@@ -26,7 +26,7 @@
 	  Across the bottom is the gnome panel. The backgrounds of the root
 	  and FvwmWinList were changed from within the xterm.</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Dan-desk-1280x1024.gif">
 	    <img src="Dan-desk-thumbnail.gif"
 	      alt="Dan Espen's Desktop"
@@ -36,7 +36,7 @@
 	  the Fvwm2 setup dialog using FvwmForm,
 	  shaped icons, and a minimal use of fvwm modules.</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Michael-desk-1152x900.gif">
 	    <img src="Michael-desk-thumbnail.gif"
 	      alt="Michael Han's Desktop"
@@ -47,7 +47,7 @@
 	  FvwmButtons, swallowing FvwmPager, procmeter and FvwmIconMan. Liberal
 	  use of MiniIcons.</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Robert-desk-1280x1024.gif">
 	    <img src="Robert-desk-thumbnail.gif"
 	      alt="Robert Ford's Desktop"
@@ -58,7 +58,7 @@
 	  FvwmPager with pixmap backgrounds, some nice icons and mini-icons,
 	  and an interesting purple/blue color scheme.</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Dominik-desk1-1152x864.gif">
 	    <img src="Dominik-desk1-thumbnail.gif"
 	      alt="Dominik Vogt's Desktop"
@@ -74,7 +74,7 @@
 	  'Popup menu-name item +100 c' for this effect).
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Dominik-desk2-1152x864.gif">
 	    <img src="Dominik-desk2-thumbnail.gif"
 	      alt="Dominik Vogt's Desktop"
@@ -87,7 +87,7 @@
 	  page with netscape 8-)
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Stric-desk1-1152x900.gif">
 	    <img src="Stric-desk1-thumbnail.gif"
 	      alt="Tomas &Ouml;gren's Desktop"
@@ -98,7 +98,7 @@
           FvwmButtons, xmeter, xbuffy, gimp and some stuff on other pages.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Windoze95-desk-1152x864.gif">
 	    <img src="Windoze95-desk-thumb.gif"
 	      alt="A Windows 95 like screenshot"
@@ -109,7 +109,7 @@
 	  fvwm.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Paul_Johnson-desk-1280x1024.gif">
 	    <img src="Paul_Johnson-desk-thumbnail.gif"
 	      alt="A Window Maker like screenshot"
@@ -118,7 +118,7 @@
 	  Submitted by Paul E. Johnson.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Ives_Aerts-desk-1280x1024.gif">
 	    <img src="Ives_Aerts-desk-thumbnail.gif"
 	      alt="A Window Maker like screenshot"
@@ -135,7 +135,7 @@
 	  mutt (mail reader), switch between windows and desks, etc.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Lee_Willis-desk-1024x768.gif">
 	    <img src="Lee_Willis-desk-thumbnail.gif"
 	      alt="A fairly simple setup"
@@ -146,7 +146,7 @@
 	  easy on the eye, and hardly any decorations to get in your way :)
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Jason_Kibble-desk-1280x1024.gif">
 	    <img src="Jason_Kibble-desk-thumbnail.gif"
 	      alt="Yet another theme"
@@ -160,7 +160,7 @@
 	  one has probably changed since this shot was taken.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Olivier_Chapuis-panelup-800x600.gif">
 	    <img src="Olivier_Chapuis-panelup-thumbnail.gif"
 	      alt="Panels up in a small screen"
@@ -178,7 +178,7 @@
 	  run only if I use it: this save my battery.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Andre_Bonhote-desk-1024x768.gif">
 	    <img src="Andre_Bonhote-desk-thumbnail.gif"
 	      alt="Gnome stuff"
@@ -191,12 +191,11 @@
 	  I like gtk so I am using gnome's panels (top and bottom, left hand side).
 	  There's an aterm window using transparency, gqmpeg and netscape, and, of
 	  course, gkrellm running.
-	  <p>
 	  For the colors, I used grdb and grdb2fvwm, which takes gnome's colors
 	  and fonts and puts it into my fvwm2rc. it's quite useful, I think.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Kendrick_Vargas-desk-1280x1024.gif">
 	    <img src="Kendrick_Vargas-desk-thumbnail.gif"
 	      alt="Fvwm Integrated with Gnome"
@@ -208,7 +207,7 @@
 	  browser. GTK theme used is minEgtk.
 	</td></tr>
 
-      <tr><td>
+      <tr valign="top"><td>
 	  <a href="Tenebrae-desk-800x600.gif">
 	    <img src="Tenebrae-desk-thumbnail.gif"
 	      alt="Light Marble GTK+ theme"
