@@ -1,3 +1,7 @@
+2000-10-27  Dan Espen  <dane@mk.telcordia.com>
+
+	* screenshots/index.html: Add borders, vertically align to the top.
+
 2000-10-26  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: A flood of screenshots, Andre Bonhote, Kendrick Vargas,
